tribute-page-contrast-issue-fixed

--- a/tributepage/css/style.css
+++ b/tributepage/css/style.css
@@ -1,5 +1,7 @@
+
 body {
     background-color: #555;
+    opacity: 1;
     font-family: "Segoe UI","Helvetica",Garuda,Arial,sans-serif;
     color: rgb(250, 250, 250);
     text-align: center;
@@ -15,16 +17,18 @@ body {
 }
 
 #tribute-person {
-    background-color: #bbb;
+    background-color: #222;
     border-radius: 1%;
     padding: 1rem;
+    box-shadow:0 2px 10px 0 rgba(0,0,0,0.16),0 8px 16px 0 rgba(0,0,0,0.12);
 }
 
 #tribute-info
 {
-    background-color:#ccc;
+    background-color:#333;
     border-radius: 1%;
     padding: 1rem;
+    box-shadow:0 2px 10px 0 rgba(0,0,0,0.16),0 8px 16px 0 rgba(0,0,0,0.12);
 }
 
 #image {
@@ -59,8 +63,8 @@ li {
     width: auto;
     height: auto;;
     margin: 0 auto; 
-    margin-bottom: 7px;
-    background-color: #aaa; 
+    margin-bottom: 10px;
+    background-color: #444; 
     padding:3px;
     font-size: 1rem;
     list-style-type: none;
@@ -68,12 +72,12 @@ li {
 
 #title {
     padding:.7em;
-    background-color: indigo;
+    background-color: #0c0314;
 }
 
 .section {
     padding: .5em;
-    background-color: indigo;
+    background-color: #0e011a;
     margin-bottom: 10px;
     margin-top: 15px;
 }
@@ -104,13 +108,36 @@ li {
     font-style: italic;
    margin-top:30px;
    font-size: 1.1rem;
+   background-color: #111;
+   box-shadow:0 2px 10px 0 rgba(0,0,0,0.16),0 8px 16px 0 rgba(0,0,0,0.12);
+
+}
+
+.footer {
+   font-size: 1.1rem;
+   background-color: #222;
+   box-shadow:0 2px 10px 0 rgba(0,0,0,0.16),0 8px 16px 0 rgba(0,0,0,0.12);
+
+}
+.quote:nth-child(odd)
+{
+    border-top-left-radius: 20%;
+}
+
+.quote:nth-child(even)
+{
+    border-bottom-right-radius: 20%;
+}
+
+a {
+    color: #c495ec;
 }
 
 .blue{ border-left: 5px solid #61A8DC; }
 
 .indigo{ border-left: 5px solid indigo; }
 
-.purple { border-left: 5px solid #988CC3; }
+.purple { border: 2px solid #0c0314; border-left: 5px solid #0c0314;}
 
 
 @media screen and (min-width: 468px) {
@@ -125,13 +152,15 @@ li {
             width: 35%;
             margin-bottom: 10px;
             max-height: 90vh;
+            position: fixed;
             display: block;
         }
 
         #tribute-info {
             float:left;
-            width: 55%;
+            width: 60%;
             margin: 20px;
+            margin-left:42%;
             overflow: hidden;
         }
 
